syntax = "proto3";

package notification;

import "google/protobuf/timestamp.proto";

option go_package = "./pkg/pb/notification";

service NotificationService {
    rpc GetNotification (GetNotificationRequest) returns (GetNotificationResponse){}
}

message GetNotificationRequest{
    int64 userID = 1;
    int64 limit = 2;
    int64 offset = 3;
}

message Message {
    int64 userID = 1;
    string username= 2;
    string profile = 3;
    int64 postID = 4;
    string message = 5;
    google.protobuf.Timestamp time = 6;
}

message GetNotificationResponse{
    repeated Message  notification= 1;
}

